--- a/credits.html
+++ b/credits.html
@@ -14,7 +14,7 @@
       }
 
       div#main {
-        margin: 16rem 2rem 2rem 2rem;
+        margin: 32rem 2rem 2rem 2rem;
       }
 
       p {
@@ -53,7 +53,7 @@
       var credits;
       var copyElement = $('#copy');
       var mainElement = $('#main');
-      var rowLength = 60;
+      var rowLength = 74;
 
       // Wait function
       function sleep(ms) {
@@ -101,7 +101,7 @@
         await fetchCredits();
 
         // Pause
-        await sleep(1000);
+        await sleep(5000);
         
         // Loop through credits
         for (let credit of credits) {
@@ -123,13 +123,13 @@
             await sleep(500);
 
             // Type first person
-            var leading = '.'.repeat(rowLength - credit.role.length - credit.heldBy[0].length);
+            var leading = '.'.repeat(rowLength - credit.role.length - credit.heldBy[0].length - 2);
             await type(copyElement, ' ' + leading + ' ' + credit.heldBy[0]);
 
             // Type subsequent persons
             for (var i = 1; i < credit.heldBy.length; i++) {
               scroll(mainElement, copyElement);
-              copyElement.append('&nbsp;'.repeat(rowLength - credit.heldBy[i].length + 2));
+              copyElement.append('&nbsp;'.repeat(rowLength - credit.heldBy[i].length));
               await type(copyElement, credit.heldBy[i]);
             }
           } else if (credit.type == 'scroll') {
